add middleware to swagger doc
