# docs/swagger.yaml
@@ -177,6 +177,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Get All Category
       tags:
       - Category
@@ -206,6 +208,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Create Category
       tags:
       - Category
@@ -235,6 +239,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Get Category By ID
       tags:
       - Category
@@ -287,6 +293,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Create Product
       tags:
       - Product
@@ -316,6 +324,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Get Product By ID
       tags:
       - Product
@@ -345,9 +355,17 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/common.ApiErrorResponseModel'
+      security:
+      - Authorization: []
       summary: Get Product By Category ID
       tags:
       - Product
 schemes:
 - http
+securityDefinitions:
+  Authorization:
+    description: This is a bearer token. Add 'Bearer ' before placing the token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
